@@ -7,7 +7,7 @@
  *                            | (__| |_| |  _ <| |___
  *                             \___|\___/|_| \_\_____|
  *
- * Copyright (C) 1998 - 2005, Daniel Stenberg, <daniel@haxx.se>, et al.
+ * Copyright (C) 1998 - 2008, Daniel Stenberg, <daniel@haxx.se>, et al.
  *
  * This software is licensed as described in the file COPYING, which
  * you should have received as part of this distribution. The terms
@@ -20,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: http_ntlm.h,v 1.13 2007-08-27 06:31:28 danf Exp $
+ * $Id: http_ntlm.h,v 1.14 2008-08-11 20:29:36 bagder Exp $
  ***************************************************************************/
 
 typedef enum {
@@ -44,6 +44,10 @@ void Curl_ntlm_cleanup(struct connectdata *conn);
 #define Curl_ntlm_cleanup(x)
 #endif
 
+#ifdef USE_WINDOWS_SSPI
+CURLcode Curl_ntlm_global_init();
+void Curl_ntlm_global_cleanup();
+#endif
 
 /* Flag bits definitions based on http://davenport.sourceforge.net/ntlm.html */
 
